# python-demo-two

./: .gitignore  IMPP.md  QUICK_REFERENCE.md  README.md  STEP_BY_STEP.md  config.toml  pyproject.toml
src/flask_todo_app/: __init__.py  app.py
src/flask_todo_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/flask_todo_app/templates/: index.html
